--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
           <div class="main__aboutMe">
             <h2 class="title"><span><span>Denis</span><span class="grey">Frolov</span></span><span class="empty"></span><span><span class="grey">Web</span><span>developer</span></span></h2>
-            <div class="main__discription">Hi! In IT since 2017. I mainly do site layout.
+            <div class="main__discription">Hi! In IT since 2017. I do website layout mostly.
             </div>
             <div class="main__contacts"><a href="https://tlgg.ru/frolloffden" class="link-wimg telegram">@frolloffden</a><a href="mailto:denffv@yandex.ru" class="link-wimg mail">denffv@yandex.ru</a>
             </div>
