--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&amp;display=swap" rel="stylesheet">
     <script src="https://yastatic.net/browser-updater/v1/script.js" charset="utf-8"></script>
     <script>var yaBrowserUpdater = new ya.browserUpdater.init({"lang":"ru","browsers":{"yabrowser":"15.12","chrome":"54","ie":"10","opera":"41","safari":"8","fx":"49","iron":"35","flock":"Infinity","palemoon":"25","camino":"Infinity","maxthon":"4.5","seamonkey":"2.3"},"theme":"yellow"});</script>
+    <link rel="stylesheet" href="css/styles.min.css"/>
   </head>
   <body>
     <div class="wrapper">
@@ -34,7 +35,7 @@
           </div>
           <div class="main__aboutMe">
             <h2 class="title"><span><span>Denis</span><span class="grey">Frolov</span></span><span class="empty"></span><span><span class="grey">Web</span><span>developer</span></span></h2>
-            <div class="main__discription">Hi! In IT since 2017. I do website layout mostly.
+            <div class="main__discription">Hi! In IT since 2017. I mainly do site layout.
             </div>
             <div class="main__contacts"><a href="https://tlgg.ru/frolloffden" class="link-wimg telegram">@frolloffden</a><a href="mailto:denffv@yandex.ru" class="link-wimg mail">denffv@yandex.ru</a>
             </div>
@@ -55,21 +56,5 @@
         </div>
       </div>
     </div>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery/dist/css/lightgallery.min.css"/>
-    <link rel="stylesheet" href="css/common.min.css"/>
-    <link rel="stylesheet" href="css/lightgallery.css"/>
-    <link rel="stylesheet" href="css/first.min.css"/>
-    <link rel="stylesheet" href="css/main.min.css"/>
-    <link rel="stylesheet" href="css/works.min.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.11.0/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-once@2.2.0/jquery.once.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lightgallery/dist/js/lightgallery-all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/inputmask/dist/min/jquery.inputmask.bundle.min.js"></script>
-    <script src="js/lightgallery.js"></script>
-    <script src="js/theme.min.js"></script>
   </body>
 </html>
